#778 Fix label name height on Safari

--- a/server/http-dashboard/app/components/Widgets/components/Widget/styles.less
+++ b/server/http-dashboard/app/components/Widgets/components/Widget/styles.less
@@ -163,7 +163,7 @@
   overflow: hidden;
 
   input {
-    height: 24px;
+    height: 28px;
     font-size: 24px;
     color: #212227;
     font-weight: 300;
